# spider_8leg_ros2_humble

./: README.md
spider_control/: CMakeLists.txt  package.xml
spider_description/: CMakeLists.txt  package.xml
spider_description/config/: bridge.yaml  controller.yaml  gaz_ros2_ctl_use_sim.yaml
spider_description/launch/: spider_gazebo.launch.py  spider_gazebo_launch.py  spider_gz_rviz.launch.py  start_world_launch.py
spider_description/meshes/collision/: LL1_fumer.STL  LL1_tibia.STL  LL2_coxa.STL  LL2_fumer.STL  LL2_tibia.STL  LL3_coxa.STL  LL3_fumer.STL  LL3_tibia.STL  LL4_coxa.STL  LL4_fumer.STL  LL4_tibia.STL  RL1_coxa.STL  RL1_fumer.STL  RL1_tibia.STL  RL2_coxa.STL  RL2_tibia.STL  RL3_coxa.STL  RL3_fumer.STL  RL3_tibia.STL  RL4_coxa.STL  RL4_fumer.STL  RL4_tibia.STL  base_link.STL  camera_link.STL  lidar.STL
spider_description/meshes/visual/: LL1_coxa.STL  LL1_fumer.STL  LL1_tibia.STL  LL2_coxa.STL  LL2_fumer.STL  LL3_coxa.STL  LL3_tibia.STL  LL4_coxa.STL  LL4_fumer.STL  LL4_tibia.STL  RL1_coxa.STL  RL1_tibia.STL  RL2_coxa.STL  RL2_fumer.STL  RL2_tibia.STL  RL3_coxa.STL  RL3_fumer.STL  RL3_tibia.STL  RL4_coxa.STL  base_link.STL
spider_description/src/: circle_gait.py  gait.py  gui.py  ike_gait.py  scan_filter.cpp  test.py  test1.py  test2.py  trajcheck.py
spider_description/urdf/: lidar.gazebo  realsense2_camera.xacro  spider.gazebo  spider_description.xacro  spider_description_1.xacro
spider_gui/: CMakeLists.txt  package.xml
spider_gui/src/: joint_gui.py
spider_rviz/: CMakeLists.txt  package.xml
spider_rviz/launch/: launch.py
spider_rviz/rviz/: rviz_launch.rviz
spider_slam/: CMakeLists.txt  package.xml
spider_warehouse/: CMakeLists.txt  package.xml
spider_warehouse/launch/: spawn_spider.launch.py  warehouse.launch.py
spider_warehouse/worlds/: spider_warehouse.world
(+28 files in other folders)
